--- a/theme.toml
+++ b/theme.toml
@@ -2,7 +2,7 @@ name = "Geoweaver"
 license = "MIT"
 licenselink = "https://github.com/zeon-studio/hugoplate/blob/main/LICENSE"
 description = "A web system to allow users to automatically record history and manage complicated scientific workflows in web browsers involving the online spatial data facilities, high-performance computation platforms, and open-source libraries."
-homepage = "https://github.com/zeon-studio/hugoplate"
+homepage = "https://github.com/ESIPFed/Geoweaver"
 demosite = "https://geobrain.csiss.gmu.edu/Geoweaver"
 min_version = "0.118.2"
 
