--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -53,9 +53,14 @@ name = "About"
 url = "about/"
 weight = 1
 
+#[[footer]]
+#name = "Elements"
+#url = "elements/"
+#weight = 2
+
 [[footer]]
-name = "Elements"
-url = "elements/"
+name = "Contact Us"
+url = "contact/"
 weight = 2
 
 [[footer]]
