--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -39,7 +39,7 @@ preloader = "" # use jpg, png, svg or gif format.
 [navigation_button]
 enable = true
 label = "Give us a ⭐️"
-link = "contact"
+link = "https://github.com/ESIPFed/Geoweaver"
 
 # search
 # search module: https://github.com/gethugothemes/hugo-modules/tree/master/search
