add href to getting started and removed placeholder blog content

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -7,44 +7,44 @@ url = "/"
 weight = 1
 
 [[main]]
-name = "About"
-url = "about/"
+name = "Download"
+url = "#downloads-section"
 weight = 2
 
-[[main]]
-name = "Elements"
-url = "elements/"
-weight = 3
+#[[main]]
+#name = "Elements"
+#url = "elements/"
+#weight = 3
+
+#[[main]]
+#weight = 4
+#name = "Pages"
+#hasChildren = true
 
 [[main]]
-weight = 4
-name = "Pages"
-hasChildren = true
-
-[[main]]
-parent = "Pages"
+#parent = "Pages"
 name = "Blog"
 url = "blog/"
 
-[[main]]
-parent = "Pages"
-name = "Contact"
-url = "contact/"
+#[[main]]
+#parent = "Pages"
+#name = "Contact"
+#url = "contact/"
 
-[[main]]
-parent = "Pages"
-name = "Authors"
-url = "authors/"
-
-[[main]]
-parent = "Pages"
-name = "Categories"
-url = "categories/"
-
-[[main]]
-parent = "Pages"
-name = "404 Page"
-url = "404/"
+#[[main]]
+#parent = "Pages"
+#name = "Authors"
+#url = "authors/"
+#
+#[[main]]
+#parent = "Pages"
+#name = "Categories"
+#url = "categories/"
+#
+#[[main]]
+#parent = "Pages"
+#name = "404 Page"
+#url = "404/"
 
 
 # footer menu
