--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -12,15 +12,11 @@ url = "#downloads-section"
 weight = 2
 
 [[main]]
+name = "Publications"
+url = "/publications"
+weight = 3
+
+[[main]]
 name = "Blog"
 url = "blog/"
-
-#[[footer]]
-#name = "Contact Us"
-#url = "contact/"
-#weight = 1
-#
-#[[footer]]
-#name = "Privacy Policy"
-#url = "privacy-policy/"
-#weight = 2
+weight = 4
